# colorhead

./: .gitignore  CMakeLists.txt
include/colorhead/: colorhead.hpp  consts.hpp  debug.hpp  text_decoration.hpp
src/: colorhead.cpp
